--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <h3>Produk Terbaru</h3>
-  <div class="row">
+  <div class="row" *ngIf="(produks)">
     
     <div *ngFor="let produk of produks" class="col-sm-3">
       <a [routerLink]="['/detail/'+produk.permalink]" ><strong>{{produk.nama}}</strong></a><br />
@@ -15,6 +15,8 @@
     </div>
 
   </div>
+
+  <div *ngIf="!(produks)">Loading..</div>
 
   <div style="margin-top: 50px;">
     <a [routerLink]="['/about']" routerLinkActive="btn btn-success" class="btn btn-primary">ke about</a>
